fix header & homepage padding issue on mobile screen view

--- a/src/app/components/PortfolioGrid.module.css
+++ b/src/app/components/PortfolioGrid.module.css
@@ -1,33 +1,40 @@
 /* src/app/components/PortfolioGrid.module.css */
 .container {
-    padding: 2rem;
+  padding: 2rem; /* Padding for larger screens */
+  max-width: 1200px; /* Optional: Set a max-width */
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 1rem; /* Reduce padding on smaller screens */
   }
-  
-  .imgContainer {
-    position: relative;
-    width: 100%;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    transition: opacity 0.3s;
-  }
-  
-  .imgContainer:hover .overlay {
-    opacity: 1;
-  }
-  
-  .text {
-    font-size: 1.5rem;
-  }
-  
+}
+
+.imgContainer {
+  position: relative;
+  width: 100%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.imgContainer:hover .overlay {
+  opacity: 1;
+}
+
+.text {
+  font-size: 1.5rem;
+}
